# web_applications_django

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
taskmanager/: pytest.ini
taskmanager/accounts/: backends.py  forms.py  models.py  urls.py  views.py
taskmanager/accounts/migrations/: 0001_initial.py  0002_alter_taskmanageruser_unique_together_and_more.py  0003_initial.py
taskmanager/accounts/services/: auth.py
taskmanager/taskmanager/: settings.py  urls.py
taskmanager/tasks/: admin.py  context_processors.py  converters.py  exceptions.py  fields.py  forms.py  middlewares.py  mixins.py  models.py  services.py  tasks_logger.py  urls.py  views.py
taskmanager/tasks/api/: api.py  model_schemas.py  pagination.py  schemas.py  security.py  tasks.py
taskmanager/tasks/migrations/: 0001_initial.py  0002_auto_20240210_1728.py  0003_sprint_epic_task_epic_and_more.py  0004_task_valid_status.py  0005_task_due_date_task_due_date_after_created_at.py  0006_task_version.py  0007_task_priority_subscribedemail_comment.py  0008_task_file_upload_task_image_upload.py  0009_alter_task_options.py
taskmanager/tasks/services/: auth.py  email.py  epic.py  sprint.py  task.py
taskmanager/tasks/templatetags/: sprint_tags.py  task_filters.py  tasks_filters.py
taskmanager/tasks/tests/: conftest.py  factories.py  test_api.py
taskmanager/templates/accounts/: custom_password_reset_email.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm_form.html  password_reset_done.html  (+3 more)
(+16 files in other folders)
